-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.4.1, Lustre 2.5.0
-
3
-
9280
In function mgs_pool_cmd(), fsdb_mutex is locked and then mti is allocated. It is not correct and will cause problem if memory allocating fails and leaves fsdb_mutex locked. Following is the codes.
mutex_lock(&fsdb->fsdb_mutex);
if (canceled_label != NULL)
{ OBD_ALLOC_PTR(mti); if (mti == NULL) GOTO(out_cancel, rc = -ENOMEM); }